# XCraft

./: CMakeLists.txt  Game Design Document.md  Motivational Book about Discipline & Programming Principles.md  Motivational Book about Discipline.md  OOP-Unix_WorkMethodology.md  README.md
sourcecode/: main.cpp
